kuber/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-dp
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: hw7kuber
          image: kisuni/hw7kuber
          ports:
            - containerPort: 8000
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres
