kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth.auth.svc.cluster.local:80/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/login"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User,X-Email,X-UserId"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 80
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 80
